fixed  modal's preview video size not responsive when mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -1279,3 +1279,25 @@ section#email-me .section-heading {
   background-color: #d9b73b !important;
   border-color: #d9b73b !important;
 }
+
+.modal-body .video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  padding-top: 35px;
+  height: 0;
+  overflow: hiddlen;
+}
+
+.modal-body .video-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media screen and (max-width: 480px) {
+  .portfolio-modal .modal-content h2 {
+    font-size: 2rem;
+  }
+}
